# climate-auto

./: .env.example  .gitignore  PROGRESS.md  README.md  data_source.md  pyproject.toml
.github/workflows/: ci.yml
config/: settings.yaml
docs/: chart-recognition-research.md
src/climate_auto/: __init__.py  config.py  downloader.py  main.py  models.py  report_selector.py  storage.py
src/climate_auto/report/: __init__.py  analyzer.py  claude_analyzer.py  cwa.py  discovery.py  docx_exporter.py  forecast.py  generator.py  models.py  numeric.py  sounding.py
src/climate_auto/report/references/: skew-t-guide.md
src/climate_auto/report/templates/: daily_report.md.j2
src/climate_auto/scrapers/: __init__.py  base.py  bom_mjo.py  cwa_main.py  cwa_marine.py  cwa_upper.py  ncdr_corrdiff.py  ncdr_dwp.py  ncdr_ecmwf.py  utils.py
src/climate_auto/web/: __init__.py  api.py  app.py  jobs.py  paths.py  schemas.py  server.py
src/climate_auto/web/static/: editor.js
src/climate_auto/web/templates/: editor.html
tests/: test_config.py  test_downloader.py  test_main.py  test_models.py  test_report_selector.py  test_storage.py
tests/test_report/: test_claude_analyzer.py  test_cwa.py  test_discovery.py  test_docx_exporter.py  test_forecast.py  test_generator.py  test_models.py  test_numeric_integration.py  test_sounding.py  test_template.py
tests/test_scrapers/: test_ncdr_ecmwf.py
tests/test_web/: conftest.py  test_api.py  test_jobs.py  test_paths.py  test_run.py  test_schemas.py
